package game;

public interface ObserverLevelStats {
    void onStatsChanged();
}
