package loading;

import game.LevelReader;

public interface EntityLoader {
    public void load(LevelReader lr);
}
